src/tests/testfiles/variable-declarations/23.txt
testfiles/variable-declarations/23.c:2:6: error: size of array 'a' has non-integer type (have 'float')
int a[5.5] = {1, 2, 3, 4, 5};
    ^
